# think-mcp-host

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-mac.yml  build-windows.yml
scripts/: build-dmg.sh  build-obf-dist.ps1  build.bat  build.ps1  build.sh  launcher.sh
think_mcp_host/: __init__.py  destiny_host.py
think_mcp_host/resources/icons/: heart.icns
think_mcp_host/resources/poetry/: ai.txt  ai_en.txt  love.txt  love_en.txt  zen.txt  zen_en.txt
think_mcp_host/utils/: __init__.py  console.py  poetry_display.py
