[project]
name = "think-mcp-host"
version = "0.7.5"
description = "Think MCP Host Application"
packages = [
    { include = "think_mcp_host" }
]
authors = [
    {name = "ThinkThinking", email = "yezhenjie@outlook.de"},
]
dependencies = [
    "rich>=10.0.0",
    "prompt_toolkit>=3.0.0",
    "pyfiglet>=0.8.post1",
    "python-dotenv>=0.19.0",
    "think-llm-client>=0.4.0",
    "think-mcp-client>=0.2.5",
    "httpx[socks]",
]
requires-python = ">=3.12"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
package-type = "application"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "httpx[socks]>=0.24.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "deptry>=0.23.0",
    "isort>=6.0.0",
]

[tool.deptry]
package_module_name_map = { "python-dotenv" = "dotenv" }

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[project.scripts]
think-mcp-host = "think_mcp_host:main"

[tool.hatch.metadata]
allow-direct-references = true